[gd_scene format=3 uid="uid://dhee4wvahq1f6"]

[ext_resource type="Theme" uid="uid://i3ie1adu7bjd" path="res://assets/panels.tres" id="1_eg0yp"]
[ext_resource type="Script" uid="uid://bw72oj6nax4k8" path="res://scripts/world_template.gd" id="2_ur8f7"]
[ext_resource type="Material" uid="uid://dfns8uhc1h7mi" path="res://assets/gradient.tres" id="3_ur8f7"]
[ext_resource type="Theme" uid="uid://cqibxoll77in2" path="res://assets/main_buttons.tres" id="3_y53y6"]

[sub_resource type="Image" id="Image_ur8f7"]
data = {
"data": PackedByteArray(20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 32, 38, 73, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 64, 73, 115, 255, 64, 73, 115, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 32, 38, 73, 255, 32, 38, 73, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 32, 38, 73, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 32, 38, 73, 255, 32, 38, 73, 255, 32, 38, 73, 255, 64, 73, 115, 255, 64, 73, 115, 255, 64, 73, 115, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255, 20, 24, 46, 255),
"format": "RGBA8",
"height": 32,
"mipmaps": false,
"width": 32
}

[sub_resource type="ImageTexture" id="ImageTexture_ur8f7"]
image = SubResource("Image_ur8f7")

[node name="WorldTemplate" type="PanelContainer" unique_id=302619555]
theme = ExtResource("1_eg0yp")
script = ExtResource("2_ur8f7")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1196540207]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=420746752]
layout_mode = 2

[node name="Avatar" type="TextureRect" parent="MarginContainer/VBoxContainer" unique_id=1529345700]
material = ExtResource("3_ur8f7")
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = SubResource("ImageTexture_ur8f7")
expand_mode = 1
stretch_mode = 6

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer" unique_id=1921219329]
layout_mode = 2
text = "NAME"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1005409723]
layout_mode = 2
alignment = 1

[node name="Open" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer" unique_id=1528982829]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_y53y6")
text = "Open"

[node name="Delete" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer" unique_id=627291858]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_y53y6")
text = "Trash
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Open" to="." method="_on_open_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Delete" to="." method="_on_delete_pressed"]
